--- a/src/main/resources/templates/topics/index.html
+++ b/src/main/resources/templates/topics/index.html
@@ -28,8 +28,7 @@
 								href="/favorite?topic_id=1" th:href="@{'/favorite'}" th:data-topic_id="${topic.id}"
 								th:data-_csrf="${_csrf.token}">
 								<img src="/images/icons/heart-black.png" th:src="@{/images/icons/heart-black.png}" />
-							</a>
-							<span class="count" th:text="${#lists.size(topic.favorites)}">0</span>
+							</a> <span class="count" th:text="${#lists.size(topic.favorites)}">0</span>
 						</div>
 						<pre class="description" th:text="${topic.description}"></pre>
 					</main>
