--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/xhtml" 
-	xmlns:th="http://www.thymeleaf.org"
+<html lang="ja" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	
+
 
 <head>
 	<meta charaset="UTF-8">
@@ -28,9 +27,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="/scripts/method-convert.js" th:src="@{/scripts/method-convert.js}"></script>
 	<script>
-		$(function(){
+		$(function () {
 			convertMethod('.convert');
-			$(".alert").fadeout(5000);
+			$(".alert").fadeOut(5000);
 		});
 	</script>
 	<!-- Query で Flash メッセージを .alert の div タグに表示させ、5000 ミリ秒 (5 秒) でフェードアウト (徐々に透明になって消え) させます。-->
